tests/ui/layout/unknown-when-no-type-parameter.stderr
error[E0080]: the type `<() as Project>::Assoc` has an unknown layout
  --> $DIR/unknown-when-no-type-parameter.rs:11:10
   |
LL |     [(); size_of::<<() as Project>::Assoc>()];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here
   |
note: inside `std::mem::size_of::<<() as Project>::Assoc>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
